fix: ANSI Font + overflow clip

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.mono-font{
+    font-family: 'Cascadia Code', monospace;
+}
